Fixed Eventbrite classes not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ button:hover {
 }
 
 .classes-eventbrite {
-  width: 60%
+  width: 80%
   margin-left:auto;
   margin-right: auto;
   padding: 2%;
